END + followup hallways discussions